--- a/calculator.html
+++ b/calculator.html
@@ -158,7 +158,7 @@
 
         <!-- SECTION: Medical Disclaimer -->
         <div class="disclaimer-footer">
-            <strong>سلب مسئولیت پزشکی:</strong> این ابزار برای اهداف آموزشی و اطلاعاتی طراحی شده است و نباید به عنوان جایگزین توصیه، تشخیص یا درمان حرفه‌ای پزشکی در نظر گرفته شود. همیشه در مورد هرگونه سوالی که در مورد یک وضعیت پزشکی دارید، از پزشک یا سایر ارائه‌دهندگان خدمات بهداشتی واجد شرایط کمک بگیggیرید.
+            <strong>سلب مسئولیت پزشکی:</strong> این ابزار برای اهداف آموزشی و اطلاعاتی طراحی شده است و نباید به عنوان جایگزین توصیه، تشخیص یا درمان حرفه‌ای پزشکی در نظر گرفته شود. همیشه در مورد هرگونه سوالی که در مورد یک وضعیت پزشکی دارید، از پزشک یا سایر ارائه‌دهندگان خدمات بهداشتی واجد شرایط کمک بگیرید.
         </div>
         <!-- END SECTION: Medical Disclaimer -->
 
